# soroban-rpc

./: .gitignore  .golangci.yml  Buat simulasi proyek  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASING.md  Struktur Proyek:  go.mod  go.sum
.cargo-husky/hooks/: pre-push
.github/: dependabot.yml
.github/actions/setup-go/: action.yml
.github/actions/setup-integration-tests/: action.yml
.github/workflows/: codeql.yml  dependency-check.yml  dry_run.sh  e2e.yml  golang.yml  golangci-lint.yml  publish-dry-run.yml  publish.yml  required_status_check.yml  rust.yml  soroban-rpc.yml  stellar-rpc.yml  system-test.yml
cmd/crates/soroban-rpc/: Cargo.toml  README.md
cmd/crates/soroban-rpc-client/: Cargo.toml  README.md
cmd/crates/soroban-rpc-client/src/: lib.rs
cmd/crates/soroban-rpc/src/: lib.rs  signer.rs  txn.rs
cmd/crates/soroban-test/: Cargo.toml
cmd/crates/stellar-rpc-client/: Cargo.toml  README.md
cmd/crates/stellar-rpc-client/src/: lib.rs  txn.rs
cmd/soroban-cli/src/rpc/: mod.rs  transaction.rs
cmd/soroban-rpc/: README.md  main.go
cmd/soroban-rpc/docker/: Dockerfile  Makefile
cmd/soroban-rpc/internal/: jsonrpc.go
cmd/soroban-rpc/internal/config/: config.go  config_option.go  flags.go  main.go  main_test.go  option.go  option_test.go  options.go  options_test.go  parse.go  toml_test.go  version.go
cmd/soroban-rpc/internal/daemon/: daemon.go  metrics.go
cmd/soroban-rpc/internal/db/: cdp.go  cursor.go  cursor_test.go  db.go  event.go  event_test.go  ledger.go  ledger_test.go  ledgerentry.go  ledgerentry_test.go  migration.go  mock_ledger.go  mock_transaction.go  mocks.go  transaction.go  transaction_test.go  util.go
cmd/soroban-rpc/internal/events/: cursor.go  cursor_test.go  events.go  events_test.go
cmd/soroban-rpc/internal/feewindow/: feewindow.go  feewindow_test.go
cmd/soroban-rpc/internal/ingest/: ledgerentry.go  mock_db_test.go  service.go  service_test.go
cmd/soroban-rpc/internal/integrationtest/: archive_test.go  cors_test.go  get_fee_stats_test.go  get_ledger_entries_test.go  get_ledger_entry_test.go  get_ledgers_test.go  get_network_test.go  get_transactions_test.go  get_version_info_test.go  health_test.go  metrics_test.go  migrate_test.go  simulate_transaction_test.go  transaction_test.go  upgrade_test.go
cmd/soroban-rpc/internal/ledgerbucketwindow/: ledgerbucketwindow.go  ledgerbucketwindow_test.go
cmd/soroban-rpc/internal/methods/: get_events.go  get_events_test.go  get_fee_stats.go  get_latest_ledger.go  get_latest_ledger_test.go  get_ledger_entries.go  get_ledger_entry.go  get_ledgers.go  get_ledgers_test.go  get_network.go  get_transaction.go  get_transaction_test.go  get_transactions.go  get_transactions_test.go  get_version.go  get_version_info.go  handler.go  handler_test.go  health.go  json.go  send_transaction.go  simulate_transaction.go  simulate_transaction_test.go  util.go  util_test.go
cmd/soroban-rpc/internal/network/: backlogQ.go  backlogQ_test.go  requestdurationlimiter.go  requestdurationlimiter_test.go
cmd/soroban-rpc/internal/preflight/: conversion.go  pool.go  preflight.go  preflight_test.go
cmd/soroban-rpc/internal/test/: archive_test.go  captive-core-integration-tests.cfg  cli_test.go  cors_test.go  docker-compose.rpc.yml  docker-compose.yml  get_fee_stats_test.go  get_ledger_entries_test.go  get_ledger_entry_test.go  get_network_test.go  get_transactions_test.go  get_version_info_test.go  health_test.go  integration.go  metrics_test.go  migrate_test.go  simulate_transaction_test.go  stellar-core-integration-tests.cfg  transaction_test.go  upgrade_test.go
cmd/soroban-rpc/internal/transactions/: cursor.go  database.go  interface.go  memory.go  transactions.go  transactions_test.go
cmd/soroban-rpc/internal/util/: mocks.go  panicgroup_test.go
cmd/soroban-rpc/internal/xdr2json/: conversion.go  conversion_test.go
cmd/soroban-rpc/lib/: preflight.h  xdrjson.h
cmd/soroban-rpc/lib/ffi/: Cargo.toml
cmd/soroban-rpc/lib/preflight/: Cargo.toml
cmd/soroban-rpc/lib/preflight/src/: lib.rs  shared.rs
cmd/soroban-rpc/lib/xdr2json/: Cargo.toml
cmd/stellar-rpc/: README.md  main.go
cmd/stellar-rpc/docker/: Dockerfile  Dockerfile.release  Makefile
cmd/stellar-rpc/internal/: jsonrpc.go
cmd/stellar-rpc/internal/config/: flags.go  main.go  main_test.go  option.go  options.go  parse.go  test.soroban.rpc.config  toml.go  toml_test.go  version.go
cmd/stellar-rpc/internal/daemon/: daemon.go  metrics.go
cmd/stellar-rpc/internal/db/: cursor.go  cursor_test.go  db.go  event_test.go  ledger.go  ledger_test.go  ledgerentry_test.go  migration.go  mocks.go  transaction.go  transaction_test.go
cmd/stellar-rpc/internal/events/: cursor.go  events.go  events_test.go
cmd/stellar-rpc/internal/feewindow/: feewindow.go  feewindow_test.go
cmd/stellar-rpc/internal/ingest/: ledgerentry.go  mock_db_test.go  service.go  service_test.go
cmd/stellar-rpc/internal/integrationtest/: archive_test.go  cors_test.go  get_fee_stats_test.go  get_ledger_entries_test.go  get_ledger_entry_test.go  get_ledgers_test.go  get_network_test.go  get_transactions_test.go  get_version_info_test.go  health_test.go  metrics_test.go  migrate_test.go  simulate_transaction_test.go  transaction_test.go  upgrade_test.go
cmd/stellar-rpc/internal/methods/: get_events.go  get_events_test.go  get_fee_stats.go  get_latest_ledger.go  get_latest_ledger_test.go  get_ledger_entries.go  get_ledger_entry.go  get_ledgers.go  get_ledgers_test.go  get_network.go  get_transaction.go  get_transaction_test.go  get_transactions.go  get_transactions_test.go  get_version_info.go  handler.go  handler_test.go  health.go  json.go  send_transaction.go  simulate_transaction.go  simulate_transaction_test.go  util.go  util_test.go
cmd/stellar-rpc/lib/preflight/: Cargo.toml
cmd/stellar-rpc/lib/preflight/src/: shared.rs
cmd/stellar-rpc/lib/xdr2json/: Cargo.toml
docs/: MONITORING.md  soroban-cli-full-docs.md
pubnet/: captive-core.cfg  soroban-rpc.cfg
scripts/: check-dependencies.bash
src/rpc/: mod.rs
wasms/: test_hello_world.wasm
(+36 files in other folders)
