[workspace]
resolver = "2"
members = [
    "cmd/soroban-rpc/lib/preflight",
    "cmd/soroban-rpc/lib/ffi",
    "cmd/soroban-rpc/lib/xdr2json"
]

[workspace.package]
rust-version = "1.74.0"
[workspace.dependencies.soroban-env-host-prev]
package = "soroban-env-host"
version = "=21.2.0"

[workspace.dependencies.soroban-env-host-curr]
package = "soroban-env-host"
version = "=22.0.0"
git = "https://github.com/stellar/rs-soroban-env"
rev = "4b366a38798a84ca0ca4dde2aaef5ffdcc1cc4a4"

[workspace.dependencies.soroban-simulation-prev]
package = "soroban-simulation"
version = "=21.2.0"

[workspace.dependencies.soroban-simulation-curr]
package = "soroban-simulation"
version = "=22.0.0"
git = "https://github.com/stellar/rs-soroban-env"
rev = "4b366a38798a84ca0ca4dde2aaef5ffdcc1cc4a4"

[workspace.dependencies.stellar-xdr]
version = "=21.2.0"
features = [ "serde" ]

[workspace.dependencies]
base64 = "0.22.0"
sha2 = "0.10.7"
libc = "0.2.147"
anyhow = "1.0.75"
rand = { version = "0.8.5", features = [] }
serde_json = "1.0"

[profile.release-with-panic-unwind]
inherits = 'release'
panic = 'unwind'
