[workspace]
resolver = "2"
members = [
    "cmd/soroban-rpc/lib/preflight",
    "cmd/soroban-rpc/lib/ffi",
    "cmd/soroban-rpc/lib/xdr2json"
]

[workspace.package]
rust-version = "1.79.0"

[workspace.dependencies.soroban-env-host]
version = "=22.0.0"
git = "https://github.com/stellar/rs-soroban-env"
rev = "5ed156b7fb5dd3e46635aa0f818d5db33dfd6b6a"

[workspace.dependencies.soroban-simulation]
version = "=22.0.0"
git = "https://github.com/stellar/rs-soroban-env"
rev = "5ed156b7fb5dd3e46635aa0f818d5db33dfd6b6a"

[workspace.dependencies.stellar-xdr]
version = "=22.0.0"
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "550743b50cd3ca5a63f03f9d7175b4cfdfd9c4ac"
features = [ "serde" ]

[workspace.dependencies]
base64 = "0.22.0"
sha2 = "0.10.7"
libc = "0.2.147"
anyhow = "1.0.75"
rand = { version = "0.8.5", features = [] }
serde_json = "1.0"

[profile.release-with-panic-unwind]
inherits = 'release'
panic = 'unwind'
