[workspace]
resolver = "2"
members = [
    "cmd/soroban-rpc/lib/preflight",
    "cmd/soroban-rpc/lib/ffi",
    "cmd/soroban-rpc/lib/xdr2json"
]

[workspace.package]
rust-version = "1.74.0"

[workspace.dependencies.soroban-env-host-prev]
package = "soroban-env-host"
version = "=21.2.0"

[workspace.dependencies.soroban-env-host-curr]
package = "soroban-env-host"
version = "=22.0.0"
git = "https://github.com/stellar/rs-soroban-env"
rev = "75b782119942a4c8be8003f2901db38b30b6db2d"

[workspace.dependencies.soroban-simulation-prev]
package = "soroban-simulation"
version = "=21.2.0"

[workspace.dependencies.soroban-simulation-curr]
package = "soroban-simulation"
version = "=22.0.0"
git = "https://github.com/stellar/rs-soroban-env"
rev = "75b782119942a4c8be8003f2901db38b30b6db2d"

[workspace.dependencies.stellar-xdr]
version = "=22.0.0"
git = "https://github.com/stellar/rs-stellar-xdr.git"
rev = "5315f4c583784860c0accbb8d3bd234055a19751"
features = [ "serde" ]

[workspace.dependencies]
base64 = "0.22.0"
sha2 = "0.10.7"
libc = "0.2.147"
anyhow = "1.0.75"
rand = { version = "0.8.5", features = [] }
serde_json = "1.0"

[profile.release-with-panic-unwind]
inherits = 'release'
panic = 'unwind'
