[package]
name = "stellar-rpc-client"
description = "Stellar RPC client for rust"
homepage = "https://github.com/stellar/soroban-rpc"
repository = "https://github.com/stellar/soroban-rpc"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version.workspace = true
edition = "2021"
rust-version.workspace = true
autobins = false


[lib]
crate-type = ["rlib"]


[dependencies]
soroban-sdk = { workspace = true }
soroban-env-host = { workspace = true }
stellar-strkey = "0.0.7"
stellar-xdr = { workspace = true, features = ["curr", "std", "serde"] }
soroban-spec = { workspace = true }

termcolor = "1.1.3"
termcolor_output = "1.0.1"
clap = { version = "4.1.8", features = ["derive", "env", "deprecated", "string"] }
serde_json = "1.0.82"
serde-aux = "4.1.2"
itertools = "0.10.0"
hex = "0.4.3"
thiserror = "1.0.46"
serde = "1.0.82"
tokio = "1.28.1"
sha2 = "0.10.7"
ed25519-dalek = "2.0.0"
tracing = "0.1.40"

# networking
jsonrpsee-http-client = "0.20.1"
jsonrpsee-core = "0.20.1"
http = "1.0.0"

