[package]
name = "preflight"
version = "21.3.0"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
base64 = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }
# we need the testutils feature in order to get backtraces in the preflight library
# when soroban rpc is configured to run with --preflight-enable-debug
soroban-env-host = { workspace = true, features = ["recording_mode", "testutils", "unstable-next-api"]}
soroban-simulation = { workspace = true }
stellar-xdr = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
