[package]
name = "preflight"
version = "22.0.0"
publish = false
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ffi = { path = "../ffi" }

base64 = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }

# we need the testutils feature in order to get backtraces in the preflight library
# when stellar rpc is configured to run with --preflight-enable-debug
soroban-env-host-prev = { workspace = true, features = ["recording_mode", "testutils", "unstable-next-api"]}
soroban-simulation-prev = { workspace = true }
soroban-env-host-curr = { workspace = true, features = ["recording_mode", "testutils", "unstable-next-api"]}
soroban-simulation-curr = { workspace = true }

anyhow = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
